2010-01-18  Peter Bloomfield

	* src/balsa-app.h: move nm_state and check_mail_skipped from
	BalsaApplication to BalsaWindow.
	* src/main-window.c: ditto.
	* src/main-window.h: ditto.

2010-01-17  Peter Bloomfield

	* src/balsa-app.h: new member mail_check_skipped.
	* src/main-window.c: use it to remember when we skipped a mail
	check while disconnected, and to check mail on reconnection.

2010-01-17  Peter Bloomfield

	* src/main-window.c: restart timer after user checks mail
	manually.

2010-01-17  Peter Bloomfield

	* src/balsa-app.c (update_timer): use g_timeout_add_seconds,
	save the world.

2010-01-17  Peter Bloomfield

	* src/main-window.c: report NetworkManager state on start-up;
	skip POP3 checks when disconnected; do not disconnect local IMAP
	server when NetworkManager is disconnected.

2010-01-17  Pawel Salek

	* libbalsa/imap/imap-tls.c: check also the length when matching
	the host name vs the one in the certificate.

2010-01-17  Peter Bloomfield

	* src/main-window.c: close the new-mail notification instead of
	showing it with a 1 millisecond time-out.

2010-01-16  Peter Bloomfield

	* src/balsa-app.h: new member NMState nm_state.
	* src/main-window.c: use it to save NetworkManager state;
	connect or disconnect IMAP on changes to/from
	NM_STATE_CONNECTED.

2010-01-16  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_save_temporary): make
	temporary file read-only.

2010-01-15  Pawel Salek

	* libbalsa/imap/imap_compress.c:
	* libbalsa/imap/siobuf.c: complete the compression error handling.

2010-01-14  Peter Bloomfield

	* libbalsa/html.h: new methods for printing.
	* libbalsa/html.c (libbalsa_html_can_print),
	(libbalsa_html_print): implement them.
	* src/balsa-mime-widget-text.c (bmwt_populate_popup_menu),
	(bmwt_populate_popup_cb): use them.

2010-01-14  Peter Bloomfield

	* libbalsa/html.h: new methods for printing.
	* libbalsa/html.c (libbalsa_html_can_print),
	(libbalsa_html_print): implement them.